# topostream_stage0_specs

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.agents/skills/: SKILL.md
agents/: 00_repo_rules.md  01_sim_xy.md  02_extract_vortices.md  03_pairing.md  04_clock_metrics.md  05_validation_suite.md  06_cli_reproduce.md
benchmarks/stage1_xy_single_sweep/: README.md  expected_invariants.json  manifest.json  run_benchmark.py
benchmarks/stage1_xy_single_sweep/frozen/: sim_XY_16x16_T0.9000_seed0042.npy  summary_XY_16x16_T0.9000_seed0042.json  tokens_XY_16x16_T0.9000_seed0042.jsonl
configs/: default.yaml
docs/: SPEC_ALGORITHMS.md  SPEC_FORMULAE.md  SPEC_INPUTS.md  SPEC_METRICS.md  SPEC_UQ.md  SPEC_VALIDATION.md  downstream_token_benchmark.md
schemas/: topology_event_stream.schema.json
scripts/: physics_sanity_audit.py  run_token_benchmark.py
src/topostream/: __init__.py  cli.py
src/topostream/aggregate/: __init__.py  confidence.py
src/topostream/analysis/: token_benchmark.py
src/topostream/extract/: __init__.py  pairing.py  vortices.py
src/topostream/io/: __init__.py  (+1 more)
tests/: test_aggregate_confidence.py  test_benchmark_stage1.py  test_cli_reproduce.py  test_extract_vortices.py  test_map_mode_synthetic.py  test_metrics_clock.py  test_metrics_clock6_order.py  test_metrics_helicity.py  test_noise_robustness.py  test_pairing.py  test_physics_sanity_audit.py  test_r_max_sensitivity.py  test_schema_conditionals.py  test_schema_consistency.py  test_sim_clock6.py  test_sim_xy.py  test_token_benchmark.py  test_validation_suite.py
(+9 files in other folders)
