[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topostream"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "numba>=0.57",
    "jsonschema>=4.17",
    "pyyaml>=6.0",       # required: CLI config loading (reproduce/sweep commands)
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]                   # optional: topostream plot sub-command
dev  = ["pytest>=7.4", "pytest-cov", "pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
